--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
   <link rel="manifest" href="manifest.json">
 
   <script>
-    // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "29722813";
+    // Local variable for "serviceWorkerVersion" is deprecated. 
+    // See https://docs.flutter.dev/platform-integration/web/initialization
+    // for more details.
+    "779850312"
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="main.dart.js" defer></script>
@@ -43,7 +45,7 @@
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
+      _flutter.loader.load({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
