--- a/index.html
+++ b/index.html
@@ -36,10 +36,19 @@
     // Local variable for "serviceWorkerVersion" is deprecated. 
     // See https://docs.flutter.dev/platform-integration/web/initialization
     // for more details.
-    "4188695797"
+    "161392587"
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="main.dart.js" defer></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DY1L4T0Q57"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DY1L4T0Q57');
+  </script>
 </head>
 <body>
   <script>
